--- a/main.css
+++ b/main.css
@@ -21,6 +21,23 @@
 body {
     max-width: 1600px;
     width: 100%;
+    background: var(--bck);
+}
+
+.link1 {
+    max-width: 93px;
+    width: 100%;
+    height: 65px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    transition: .5s;
+}
+
+.link1:hover {
+    background-color: rgba(105, 207, 23, 0.75);
+
 }
 
 .container {
@@ -32,6 +49,7 @@ body {
 
 body {
     font-family: var(--fm-1);
+
 }
 
 .header__card {
@@ -73,7 +91,7 @@ body {
     border: 1px solid gray;
     display: flex;
     justify-content: space-between;
-    padding: 2px 220px;
+    align-items: center;
 }
 
 .logo {
@@ -82,6 +100,8 @@ body {
     border-radius: 4px;
     border: 4px solid #06600F;
     background: rgba(10, 148, 24, 0.75);
+    margin-left: 245px;
+
 }
 
 .logo__text {
@@ -96,7 +116,7 @@ body {
 .list2 {
     display: flex;
     align-items: center;
-    column-gap: 27px;
+    padding: 0 205px 0;
 }
 
 .link1__text {
@@ -106,13 +126,11 @@ body {
     font-size: 18px;
     line-height: 21px;
     color: var(--white);
-
+    padding: 0 14px;
 
 }
 
-.link1__text:hover {
-    background: rgba(105, 207, 23, 0.75);
-}
+
 
 .header__card {
     height: 700px;
@@ -125,60 +143,244 @@ body {
     font-weight: 900;
     padding: 167px 0 18px 45px;
 }
-.header__card-text{
-    
+
+.header__card-text {
+
     color: var(--btn);
     font-size: 36px;
     font-family: var(--fm-2);
     font-weight: 400;
     line-height: 17px;
-    padding: 0 0  18px 45px ;
+    padding: 0 0 18px 45px;
 }
-.header__card-text1{
+
+.header__card-text1 {
     max-width: 1110px;
     width: 100%;
     color: var(--white);
-font-size: 18px;
-font-family: var(--fm-2);
-font-weight: 400;
-line-height: 24px;
-padding: 0 0 30px 45px;
+    font-size: 18px;
+    font-family: var(--fm-2);
+    font-weight: 400;
+    line-height: 24px;
+    padding: 0 0 30px 45px;
 }
-.buttons{
+
+.buttons {
     padding: 0 45px;
-    
+
 }
-.button{
+
+.button {
     background: rgba(105, 207, 23, 0.50);
-backdrop-filter: blur(9px);
-width: 285px;
-height: 103px;
-margin-right: 470px;
+    backdrop-filter: blur(9px);
+    width: 285px;
+    height: 103px;
+    margin-right: 470px;
 }
-.btn1{
-    color:var(--white);
-font-size: 50px;
-font-family: var(--fm-2);
-font-weight: 100;
-line-height: 25px;
-}
-.button1{
-    border-radius: 6px;
-background: linear-gradient(90deg, #69CF17 0%, #417D11 100%);
-width: 255px;
-height: 51px;
 
-}
-.btn2{
+.btn1 {
     color: var(--white);
-   font-size: 18px;
-   font-family: var(--fm-2);
-   font-weight: 400;
+    font-size: 50px;
+    font-weight: 100;
+    line-height: 25px;
 }
 
-button:hover {
+.button1 {
+    border-radius: 6px;
+    background: linear-gradient(90deg, #69CF17 0%, #417D11 100%);
+    width: 255px;
+    height: 51px;
+}
+
+.btn2 {
+    color: var(--white);
+    font-size: 18px;
+    font-family: var(--fm-2);
+    font-weight: 400;
+}
+
+.button1:hover {
     background: orange;
 }
-button{
+
+.button1 {
     transition: .5s;
+}
+
+/* section {
+    background: #393636;
+
+} */
+
+.main__container {
+    display: flex;
+    column-gap: 30px;
+    padding: 78px 15px 30px 15px;
+
+
+}
+
+.main04 {
+    background: #393636;
+}
+
+.main__card1 {
+    max-width: 370px;
+    width: 100%;
+    min-height: 524px;
+    background: var(--bck);
+
+}
+
+.main__img {
+    max-width: 338px;
+    width: 100%;
+    min-height: 325px;
+    padding: 15px;
+}
+
+
+
+.main__card-title {
+    color: var(--white);
+    font-family: var(--fm-2);
+    font-size: 19px;
+    font-weight: 700;
+    line-height: 15px;
+    padding: 0 15px;
+}
+
+.main__card-text {
+    max-width: 338.732px;
+    width: 100%;
+    color: var(--white);
+    font-size: 19px;
+    font-weight: 400;
+    line-height: 25px;
+    padding: 15px;
+}
+.main__container1 {
+    display: flex;
+    column-gap: 30px;
+    padding: 0 15px 15px 15px;
+}
+
+main {
+    margin: 50px 0 50px;
+
+}
+
+.wrapper {
+    background: var(--white);
+}
+
+.location__desc {
+    padding: 20px 0 0 0;
+}
+
+.location__title {
+    color: var(--btn);
+    font-size: 50px;
+    font-weight: 700;
+    line-height: 40px;
+    padding: 0 669px 20px;
+}
+
+.map {
+    width: 100%;
+}
+
+.footer {
+    background: linear-gradient(180deg, #000 0%, rgba(105, 207, 23, 0.50) 100%);
+}
+
+.footer__nav {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer__logo {
+    margin: 30px 263px;
+    border-radius: 4px;
+    border: 4px solid #06600F;
+    background: rgba(10, 148, 24, 0.75);
+    text-align: center;
+    padding: 0 18px;
+}
+
+.footer__tel {
+    margin: 45px 245px 0 0;
+    color: var(--white);
+    font-size: 20px;
+    font-weight: 700;
+
+}
+
+.footer__title {
+    padding: 81px 0 81px 680px;
+    display: flex;
+    column-gap: 20px;
+}
+
+.footer__text {
+    color: var(--white);
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.specification {
+    background: #1A3406;
+}
+
+.specification__text {
+    padding: 19px 0 19px 636px;
+    color: var(--white);
+}
+
+.shadow {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 60%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: scale(0);
+    transition: 0.5s;
+    background: rgba(105, 207, 23, 0.9);
+   
+}
+
+.img:hover .shadow {
+    transform: scale(1);
+}
+.main__card1{
+    position: relative;
+}
+
+
+
+/* decs html */
+.section1 {
+    margin: 0 0 30px 200px;
+
+}
+
+.parda__text{
+    color: var(--btn);
+    text-transform: uppercase;
+}
+.section1__img {
+    padding-bottom: 30px;
+}
+
+.section1__text {
+    color: var(--white);
+    max-width: 1110px;
+    width: 100%;
+    font-weight: 700;
+    line-height: 25px;
+    text-align: justify;
+    font-size: 18px
 }
